--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="pillow" src="/img/yellow-pillow.png" alt="pillow"></a>
+                  <a class="navbar-brand" href="https://yinkouya.github.io/"><img src="/img/yellow-pillow.jpg" alt="pillow"></a>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
