--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,13 +42,13 @@
         <div class="container">
           {{ content }}
         </div>
-        <footer class="footer">
+        <div class="footer">
           <p class="copyright">
             &copy;
             <span itemprop="copyrightYear">May 2017</span>
             <span itemprop="name"><a href="https://github.com/yinkouya"><img class="footer" src="/img/github.jpg" alt="github"></a> </span>
           </p>
-        </footer>
+        </div>
       </div>
     
      <!-- jQuery first, then Tether, then Bootstrap JS. -->
