--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,18 +1,13 @@
 ---
 layout: default
 ---
-
 <div class="posts-list">
-  <ul class="post-list">
+  <h3 class='bottom-space-1'>As time passes by:</h3>
   {% for post in site.categories[page.category] %}
-  <li>
-      <a href="{{ post.url | prepend: site.baseurl }}">
-        <h6 class="post-title">{{ post.title }}</h6>
-      </a>
-      <span class="post-meta">
-        {{ post.date | date: "%B %-d, %Y" }}
-      </span>
-  </li>
+    <a href="{{ post.url | prepend: site.baseurl }}">
+      <span class='date'>{{ post.date | date_to_string }}</span>
+      <span class='article'>{{ post.title }}</span>
+      <strong class='tag'>{{ post.tags | first }}</strong>
+    </a>
   {% endfor %}
-  </ul>
 </div>
