--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,13 +1,18 @@
 ---
 layout: default
 ---
-<div class="posts-list">
-  <h3 class='bottom-space-1'>As time passes by:</h3>
-  {% for post in site.categories[page.category] %}
-    <a href="{{ post.url | prepend: site.baseurl }}">
-      <span class='date'>{{ post.date | date_to_string }}</span>
-      <span class='article'>{{ post.title }}</span>
-      <strong class='tag'>{{ post.tags | first }}</strong>
-    </a>
-  {% endfor %}
+
+{% if site.posts %}
+<div class='post-index' id='toc'>
+  <div class='container'>
+    <h3 class='bottom-space-1'>As time goes by:</h3>
+    {% for post in site.categories[page.category] %}
+    <a class='post-index-item' href="{{ post.url | prepend: site.baseurl }}">
+        <span class='date'>{{ post.date | date_to_string }}</span>
+        <span class='article'>{{ post.title }}</span>
+        <strong class='tag'>{{ post.tags | first }}</strong>
+      </a>
+    {% endfor %}
+  </div>
 </div>
+{% endif %}
