--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
-                  <span class="navbar-text">
+                  <span class="navbar-text text-right">
                     Kou Yaa
                   </span>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
                       <a class="nav-link" href="{{'category/code/index.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
