--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,16 @@
     
     <body>
       <div class="container">
-        <div class="nav-container">
+        <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
+        <div class="nav-container text-right">
               <nav class="navbar navbar-toggleable-md navbar-light">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
-                  <span class="navbar-text text-right">
+                  <span class="navbar-text">
                     Kou Yaa
                   </span>
-                  <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
                       <a class="nav-link" href="{{'category/code/index.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
