--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,10 @@ img.brand {
   border-bottom-color: #553C00;
 }
 
+.navbar-nav mr-auto {
+  margin: auto auto auto 5px;
+}
+
 .navbar-text {
   font-size: 30px;
   font-weight: 300;
