--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
                   </div>
               </nav>
         </div>
-        <div class="container">
+        <div class="main">
           {{ content }}
         </div>
         <footer class="footer">
