--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,27 @@
+html {
+  height:100%;
+}
+
+body {
+  min-height:100%;
+  margin:0;
+  padding:0;
+  position:relative;
+}
+
+.main {
+  padding-bottom:20px;
+}
+/* main的padding-bottom值要等于或大于footer的height值 */
+
+footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:20px;
+  text-align: center;
+}
+
 * {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -31,10 +55,6 @@ img.brand {
 
 img.about {
   width: 70%;
-}
-
-footer {
-  text-align: center;
 }
 
 .copyright {
