--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,11 @@ footer {
   text-align: center;
 }
 
+.fixed-bottom {
+  position: fixed;
+  bottom: 0;width:100%;
+}
+
 * {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
