--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -6,8 +6,8 @@ layout: default
 <div class='post-index' id='toc'>
   <h3 class='bottom-space-1'>As time goes by:</h3>
     {% for post in site.categories[page.category] %}
-    <ul class="list-group">
-      <li class="list-group-item">
+    <ul class="listgroup">
+      <li class="listgroup-item">
         <a class='post-index-item' href="{{ post.url | prepend: site.baseurl }}">
           <span class='date'>{{ post.date | date_to_string }}</span>
           <span class='article'>{{ post.title }}</span>
