--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
-                      <a class="nav-link" href="{{'category/code/index.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="code.html">Code<span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="{{'category/life/index.html' | absolute_url }}">Life</a>
