--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
                       <a class="nav-link" href="code.html">Code<span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{'category/life/index.html' | absolute_url }}">Life</a>
+                        <a class="nav-link" href="life.html">Life</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="{{ 'about.html'| absolute_url }}">About</a>
