--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,11 @@ img.footer {
   margin: 0 auto;
 }
 
+.row {
+  width: 720px;
+  margin: 0 auto;
+}
+  
 .main-about {
   width: 600px;
   margin: 0 auto;
