--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     
     <body>
       <div class="container">
-        <div class="nav-container text-right">
+        <div class="nav-container">
               <nav class="navbar navbar-toggleable-md navbar-light">
                   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{{ 'about.html'| absolute_url }}">About</a>
                       </li>
                     </ul>
-                    <span class="navbar-text">
+                    <span class="navbar-text text-right">
                       Kou Yaa
                     </span>
                   </div>
