--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
-<div class="article">
-  <div class="article-head">
-    <div class="article-title">{{ page.title }}</div>
-    <div class="article-date">{{ page.date | date:"%B %d, %Y" }}</div>
-  </div>
-  <div class="article-main">
-    {{ content }}
-  </div>
-</div>
+<article role="main">
+    <header>
+      <a href="{{ site.baseurl }}/" id="home_link">«</a>
+      <div class="article-date">{{ page.date | date:"%B %d, %Y" }}</div>
+      <h1>{{ page.title }}</h1>
+    </header>
+
+    <div class="text" id="js-post-content">
+        {{ content }}
+    </div>
+ </article>
