--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article role="main">
     <header>
-      <a href="{{ site.baseurl }}/" id="home_link">«</a>
+      <a href="{{ site.baseurl }}/" id="home_link"><i class="fa fa-caret-left" aria-hidden="true"></i></a>
       <div class="article-date">{{ page.date | date:"%B %d, %Y" }}</div>
       <h1>{{ page.title }}</h1>
     </header>
