--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <title>
       {% if page.title %} {{ page.title }} | {% endif %} Kouyaa
     </title>
+    <script src="https://use.fontawesome.com/2bb154564b.js"></script>
     </head>
     
     <body>
