--- a/assets/style.css
+++ b/assets/style.css
@@ -87,8 +87,8 @@ article {
   margin: 0 auto;
 }
 
-article h1, h2, h3 { color: #7c795d; font-size: 45px; font-weight: normal; line-height: 48px; margin: 0; }
-article h4, h5, h6 { color: #7c795d; font-size: 28px; font-weight: 400; line-height: 32px; margin: 0 0 24px; }
-article p { color: #4c4a37; font-size: 18px; line-height: 32px; margin: 0 0 24px; }
+article h1, h2, h3 {color: #7c795d; font-size: 40px; margin: 10px; }
+article h4, h5, h6 {color: #7c795d; font-size: 25px; margin: 8px; }
+article p { color: #4c4a37; margin: 10px; }
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
 article a:hover { color: #ffcc66 }
