--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,9 @@ h1, h2, h3, h4 {
   line-height: 1.2;
 }
 
-h1 {font-size: 2.441em;}
+h1 {
+  text-align: center;
+  font-size: 2.441em;}
 
 h2 {font-size: 1.953em;}
 
