--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article role="main">
     <header>
-      <a href="{{ site.baseurl }}/" id="home_link"><i class="fa fa-caret-left fa-fw" aria-hidden="true"></i>&nbsp;</a>
+      <i class="fa fa-heartbeat" aria-hidden="true"></i>
       <span class="article-date">{{ page.date | date:"%B %d, %Y" }}</span>
       <h1>{{ page.title }}</h1>
     </header>
