--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,12 +43,11 @@
         <div class="main">
           {{ content }}
         </div>
+
         <footer class="footer">
-          <p class="copyright">
-            &copy;
-            <span itemprop="copyrightYear">May 2017</span>
-            <span itemprop="name"><a href="https://github.com/yinkouya"><img class="footer" src="/img/github.jpg" alt="github"></a> </span>
-          </p>
+          <div class="container">
+            <span class="text-muted">&copy;May 2017<a href="https://github.com/yinkouya"><i class="fa fa-github" aria-hidden="true"></i></a></span>
+          </div>
         </footer>
       </div>
     
