--- a/assets/style.css
+++ b/assets/style.css
@@ -25,10 +25,16 @@ h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
 
-footer {
-  height:20px;
-  text-align: center;
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    background-color: #f5f5f5;
 }
+
+
 
 .fixed-bottom {
   position: fixed;
@@ -61,14 +67,6 @@ img.brand {
   margin: 0 auto 1em auto;
 }
 
-.copyright {
-  font-size: 12px;
-}
-
-img.footer {
-  width: 15px;
-  text-align: center;
-}
 
 .list-group {
   width: 600px;
