--- a/assets/style.css
+++ b/assets/style.css
@@ -32,10 +32,9 @@ h4 {font-size: 1.25em;}
 .footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
     height: 30px;
     line-height: 30px;
-    background-color: lavenderblush;
+    background-color: snow;
 }
 
 
