--- a/assets/style.css
+++ b/assets/style.css
@@ -33,15 +33,10 @@ h4 {font-size: 1.25em;}
     position: absolute;
     bottom: 0;
     height: 30px;
+    width: 100%;
     line-height: 30px;
 }
 
-
-
-.fixed-bottom {
-  position: fixed;
-  bottom: 0;width:100%;
-}
 
 img.brand {
   width: 70px;
@@ -106,7 +101,7 @@ img.brand {
 
 article {
   width: 700px;
-  margin: 0 auto;
+  margin: 0 auto 30 auto;
 }
 
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
