--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,9 @@ body {
   font-weight: 400;
   line-height: 1.45;
   color: #333;
-  margin-bottom: 30px;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 p {margin-bottom: 1.3em;}
@@ -28,6 +30,10 @@ h2 {font-size: 1.953em;}
 h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
+
+.main {
+  padding-bottom: 30px;
+}
 
 .footer {
     position: absolute;
