--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
   font-size: 1em;}
 
 body {
@@ -32,12 +31,17 @@ h3 {font-size: 1.563em;}
 h4 {font-size: 1.25em;}
 
 .main {
-  padding-bottom: 30px;
+  min-height: 100%;
+  margin-bottom: -60px;
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+  height: 30px;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     height: 30px;
     width: 100%;
     line-height: 30px;
