--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ h4 {font-size: 1.25em;}
 
 .main {
   min-height: 100%;
-  margin-bottom: -60px;
+  margin-bottom: -30px;
 }
 
 .page-wrap:after {
@@ -111,7 +111,7 @@ img.brand {
 
 article {
   width: 700px;
-  margin: 0 auto;
+  margin: 0 auto -30 auto;
 }
 
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
