--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   line-height: 1.45;
   color: #333;
-  min-height: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -32,19 +32,19 @@ h4 {font-size: 1.25em;}
 
 .main {
   min-height: 100%;
-  margin-bottom: -50px;
+  margin-bottom: -60px;
 }
 
 .main:after {
   content: "";
   display: block;
-  height: 30px;
+  height: 60px;
 }
 
 .footer {
-    height: 30px;
+    height: 60px;
     width: 100%;
-    line-height: 30px;
+    line-height: 60px;
 }
 
 
@@ -111,7 +111,13 @@ img.brand {
 
 article {
   width: 700px;
-  margin: 0 auto -50px auto;
+  margin: 0 auto -60px auto;
+}
+
+article:after {
+  content: "";
+  display: block;
+  height: 60px;
 }
 
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
