--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 html {
-  height: 100%;
   font-size: 1em;}
 
 body {
@@ -7,7 +6,6 @@ body {
   font-weight: 400;
   line-height: 1.45;
   color: #333;
-  height: 100%;
 }
 
 p {margin-bottom: 1.3em;}
@@ -50,7 +48,7 @@ img.brand {
   font-weight: 300;
 }
 
-.wrap {
+.main {
   margin: 0 auto 1em auto;
 }
 
