--- a/assets/style.css
+++ b/assets/style.css
@@ -104,10 +104,6 @@ article {
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
 article a:hover { color: #ffcc66 }
 
-.carousel-control-prev {
-  margin-left: 20px;
-}
-
-carousel-control-next {
-  margin-right: 20px;
-}
+.carousel-control-prev,
+.carousel-control-next {
+  color: #FFFFE0;
