--- a/assets/style.css
+++ b/assets/style.css
@@ -106,4 +106,11 @@ article a:hover { color: #ffcc66 }
 
 .carousel-control-prev,
 .carousel-control-next {
-  color: #C4C4C4;
+  color: #8B5742;
+}
+
+.carousel-control-prev:focus, .carousel-control-prev:hover,
+.carousel-control-next:focus,
+.carousel-control-next:hover {
+  color: #8B5742;
+}
