--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,13 @@
 html {
-  font-size: 1em;}
+  font-size: 1em;
+}
 
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   line-height: 1.45;
-  color: #534646;
+  color: #534646;    /*deep brown*/
 }
-
-p {margin-bottom: 1.3em;}
-
-h1, h2, h3, h4 {
-  margin: 1.414em 0 0.5em;
-  font-weight: inherit;
-  line-height: 1.2;
-}
-
-h1 {
-  margin-top: 1em;
-  font-size: 2.441em;}
-
-h2 {font-size: 1.953em;}
-
-h3 {font-size: 1.563em;}
-
-h4 {font-size: 1.25em;}
 
 img.brand {
   width: 70px;
@@ -89,7 +72,4 @@ article {
 article a { color: #ff9900; background: #fff4a3; text-decoration: none; }
 article a:hover { color: #ffcc66 }
 
-.code img{
-  max-width: 100%;
-}
 
