--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,35 +16,34 @@
   </head>
 
   <body>
-    <div class="body-container">
-      <div class="container">
-        <nav class="navbar navbar-toggleable-md navbar-light">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="{{ 'code.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ 'life.html' | absolute_url }}">Life</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{{ 'about.html'| absolute_url }}">About</a>
-                </li>
-              </ul>
-              <span class="navbar-text text-right">
-                Kou Yaa
-              </span>
-            </div>
-        </nav>
-      </div>
-      <div class="main">
-        {{ content }}
-      </div>
+    <div class="default container">
+      <nav class="navbar navbar-toggleable-md navbar-light">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="https://yinkouya.github.io/"><img class="brand" src="{{ site.url }}/img/yellow-pillow.jpg" alt="pillow"></a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+              <a class="nav-link" href="{{ 'code.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ 'life.html' | absolute_url }}">Life</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ 'about.html'| absolute_url }}">About</a>
+              </li>
+            </ul>
+            <span class="navbar-text text-right">
+              Kou Yaa
+            </span>
+          </div>
+      </nav>
     </div>
+    <div class="main">
+      {{ content }}
+    </div>
+
 
    <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
