--- a/assets/style.css
+++ b/assets/style.css
@@ -13,12 +13,13 @@ img.brand {
   width: 70px;
 }
 
-.container {
+/* navbar */
+.default {
   margin: 0em auto 2em auto;
   position: relative;
-  border-style: none none solid none;
+  border-bottom-style: ridge;
   border-bottom-width： thin;
-  border-bottom-color: #553C00;
+  border-bottom-color: #534646;
 }
 
 .nav-item {
